# splitmonic

./: Cargo.toml  README.md
.github/workflows/: mean_bean_deploy.yml
bip39/: Cargo.toml
crates/bip39/: Cargo.toml
crates/bip39/benches/: bench.rs
crates/bip39/src/: lib.rs  pbkdf2.rs
crates/splitmonic/: Cargo.toml  README.md
crates/splitmonic/src/: lib.rs  validation.rs
splitmonic/: Cargo.toml
splitmonic/src/: shamir.rs
splitmonic/src/ui/: util.rs
splitmonic_cli/: Cargo.toml
splitmonic_cli/src/: main.rs  split_app.rs
splitmonic_cli/src/split_app/: view.rs
src/: lib.rs  main.rs  shamir.rs  split_app.rs  ui.rs  validation.rs  wordlist.rs
src/split_app/: view.rs
src/ui/util/: stateful_list.rs
src/wordlist/: english.rs
