[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
description = "Simplicity of paper backup with security of a multi-signature"
documentation = "https://docs.rs/splitmonic"
edition = "2018"
homepage = "https://github.com/avencera/splitmonic"
license = "Apache-2.0"
name = "splitmonic"
readme = "README.md"
repository = "https://github.com/avencera/splitmonic"
version = "0.1.0"

[dependencies]
# lib
bip39 = {git = "https://github.com/praveenperera/rust-bip39.git", features = ["zeroize"]}
once_cell = "1.0"
rand = "0.8"
thiserror = "1.0"
zeroize = "1.2"

# bin (tui)
crossterm = "0.19"
tui = {version = "0.14", default-features = false, features = ["crossterm"]}

crossbeam-channel = "0.5.1"
unicode-width = "0.1"

dirs = "3.0"
