[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
description = "Split your BIP39 mnemonic phrase using shamir secret sharing"
documentation = "https://docs.rs/splitmonic"
edition = "2018"
homepage = "https://github.com/avencera/splitmonic"
license = "Apache-2.0"
name = "splitmonic"
readme = "README.md"
repository = "https://github.com/avencera/splitmonic"
version = "0.1.0"

[dependencies]
# lib
bip39 = {path = "../bip39", features = ["zeroize"]}
once_cell = "1.0"
rand = "0.8"
thiserror = "1.0"
zeroize = "1.2"

# cli
color-eyre = "0.5"
eyre = "0.6"
structopt = "0.3"

# tui
crossterm = "0.19"
tui = {version = "0.15", default-features = false, features = ["crossterm"]}

crossbeam-channel = "0.5.1"
unicode-width = "0.1"

dirs = "3.0"
maplit = "1.0"
