[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
description = "Split your BIP39 mnemonic phrase using shamir secret sharing"
documentation = "https://docs.rs/splitmonic"
edition = "2018"
homepage = "https://github.com/avencera/splitmonic"
license = "Apache-2.0"
name = "splitmonic"
readme = "README.md"
repository = "https://github.com/avencera/splitmonic"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lib
splitmonic_bip39 = {path = "../bip39", features = ["zeroize"], version = "1.0"}

once_cell = "1.0"
rand = "0.8"
thiserror = "1.0"
zeroize = "1.2"
